# 2D-Adventure-Game

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
game/: __init__.py  enemy.py  load_images.py  object.py  player.py
test/: integration_test.py  smoke_test.py  test.py
tools/: render_map_overview.py
